# GLSL_Live

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  vcpkg.json
.github/workflows/: cmake-single-platform.yml  cmake-single-platform_windows.yml  cmake_windows_build.yml
shaders/default/: default_fragment.glsl  default_vertex.glsl
src/: PCH.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  ShaderProgram.cpp  ShaderProgram.h  UIManager.cpp  UIManager.h  Utils.cpp  Utils.h
